--- a/students/2018/41/week8.css
+++ b/students/2018/41/week8.css
@@ -50,3 +50,22 @@ opacity:1.0;
             -o-filter: blur(0px);
             -ms-filter: blur(0px);
             filter: blur(0px);       }
+#C
+{
+opacity:0.9;
+      -webkit-filter: blur(5px);
+            -moz-filter: blur(5px);
+            -o-filter: blur(5px);
+            -ms-filter: blur(5px);
+            filter: blur(5px);  
+    
+      
+}
+#C:hover
+{
+opacity:1.0;
+  -webkit-filter: blur(0px);
+            -moz-filter: blur(0px);
+            -o-filter: blur(0px);
+            -ms-filter: blur(0px);
+            filter: blur(0px);       }
